--- a/src/front/public/index.css
+++ b/src/front/public/index.css
@@ -10,6 +10,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .search-input {
     height: 44px;
